# check_defects

./: CMakeLists.txt  Dockerfile  README.md  build-in-docker.sh  generate.sh  run-docker.sh
scripts/: build-docker.sh  clean-docker.sh  delete-docker.sh  run-docker.sh  run-in-docker.sh
src/: camera.cpp  camera.h  icamera.h  main.cpp  main2.cpp  main_c.cpp
